@@ -9,43 +9,13 @@ visual: recommended
 
 # GC Algorithms Comparison
 
-## Why This Exists
+## GC Algorithms Comparison
 
-Concept: GC Algorithms Comparison.
+**Concept**
 
-## The Pain Before It
+Concept: different GC algorithms optimize different tradeoffs.
 
-
-
-## Java Creator Mindset
-
-Make the rule behind gc algorithms comparison obvious so the safer choice is also the clearer one.
-
-## How You Might Invent It
-
-1. Run the Java file once without changing it.
-2. Change one input or one line.
-3. Compare the new output with the explanation.
-
-## Naive Attempt
-
-The naive version is to use gc algorithms comparison without checking what rule it is supposed to protect.
-
-## Why It Breaks
-
-If you ignore the rule behind gc algorithms comparison, the example becomes harder to trust.
-
-Edge cases usually show the bug first.
-
-## Final Java Solution
-
-Use the Java file to make the rule behind gc algorithms comparison explicit and repeatable.
-
-Run [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java) as the source of truth for the example.
-
-## Code
-
-Run [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java) and compare the output with the explanation below.
+**Example**
 
 ```java
     public static void main(String[] args) {
@@ -60,45 +30,32 @@ Run [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java) and compare the o
     }
 ```
 
-## Walkthrough
+**What happens**
 
-1. Run the Java file once without changing it.
-2. Change one input or one line.
-3. Compare the new output with the explanation.
+- Concept: different GC algorithms optimize different tradeoffs.
+- Serial GC = single-threaded, simple, small heaps
+- Parallel GC = throughput focused, multi-threaded
 
-What to observe:
+**What stays stable**
 
-- Check whether the output matches the rule in the comment header.
-- Check whether the edge case you changed still behaves as expected.
+- Concept: different GC algorithms optimize different tradeoffs. Serial GC = single-threaded, simple, small heaps Parallel GC = throughput focused, multi-threaded G1 GC = region based, predictable pauses ZGC = concurrent compaction, sub-10ms pauses Shenandoah = concurrent evacuation Flags: -XX:+UseG1GC, -XX:+UseZGC Why it matters: the best GC depends on latency target, heap size, and throughput needs.
+- The example keeps the same Java shape while you vary one thing.
 
-## Mental Model
+**What changes**
 
-- What rule is being enforced?
-- What changes when you change one input?
-- What does the output prove about the rule?
+- Concept: different GC algorithms optimize different tradeoffs. Serial GC = single-threaded, simple, small heaps Parallel GC = throughput focused, multi-threaded G1 GC = region based, predictable pauses ZGC = concurrent compaction, sub-10ms pauses Shenandoah = concurrent evacuation Flags: -XX:+UseG1GC, -XX:+UseZGC Why it matters: the best GC depends on latency target, heap size, and throughput needs.
+- That change is what reveals the behavior you need to understand.
 
-## Mistakes
+**Why it matters**
 
-- reading GC Algorithms Comparison as syntax instead of a rule
-- changing more than one thing at once
-- skipping the runnable file and only reading the prose
+Concept: different GC algorithms optimize different tradeoffs. Serial GC = single-threaded, simple, small heaps Parallel GC = throughput focused, multi-threaded G1 GC = region based, predictable pauses ZGC = concurrent compaction, sub-10ms pauses Shenandoah = concurrent evacuation Flags: -XX:+UseG1GC, -XX:+UseZGC Why it matters: the best GC depends on latency target, heap size, and throughput needs.
 
-## Tradeoffs
+**Rule**
 
-The gain is clarity or correctness.
+👉 Rule: Concept: different GC algorithms optimize different tradeoffs.
 
-The cost is usually one more rule, one more API, or one more concept to remember.
+**Try this**
 
-## Use / Avoid
-
-Use it when the problem in the header comment matches the real code you are writing.
-
-Avoid it when a simpler loop, local variable, or direct call already expresses the rule clearly.
-
-## Practice
-
-Change one line in [GcAlgorithmsComparison.java](GcAlgorithmsComparison.java), rerun it, and write down what changed before and after the edit.
-
-## Summary
-
-After this topic, you should be able to explain why GC Algorithms Comparison exists, what problem it solves, and what the runnable file proves.
+- Concept: different GC algorithms optimize different tradeoffs.
+- Serial GC = single-threaded, simple, small heaps
+- Parallel GC = throughput focused, multi-threaded
